--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -28,6 +28,8 @@
     <link th:href="@{/css/stylelog.css}" media="all" rel="stylesheet" type="text/css"/>
     <link th:href="@{/css/employee.css}" media="all" rel="stylesheet" type="text/css"/>
     <link th:href="@{/css/customer.css}" media="all" rel="stylesheet" type="text/css"/>
+    <link th:href="@{/css/home.css}" media="all" rel="stylesheet" type="text/css"/>
+
     <!-- fontawesome css -->
     <link th:href="@{/webjars/font-awesome/5.11.2/css/fontawesome.min.css} " media="all" rel="stylesheet" type="text/css"/>
     <!--image uploader css-->
