--- a/src/main/resources/templates/login/login.html
+++ b/src/main/resources/templates/login/login.html
@@ -51,14 +51,8 @@
                 <div class="text-left mb-3">
                     <button class="btn btn-primary " type="submit">LOGIN</button>
                 </div>
-                <div class="text=center mb-2">
-                    <div class="mb-3" style="color:red">or login with</div>
-                    <a href="" class="btn btn-social btn-facebook">Facebook</a>
-                    <a href="" class="btn btn-social btn-google">google</a>
-                    <a href="" class="btn btn-social btn-twitter">twitter</a>
-                </div>
-                <div style="color: #777">Dont have an account</div>
-                <a href="myregister.html" class="register-link">Register here</a>
+
+
 
 
             </fieldset>
@@ -74,9 +68,9 @@
     </div>
 </div>
 <!--footer include-->
-<footer th:replace="~{fragments/footer :: footerFragment}"></footer>
+<div th:replace="~{fragments/footer :: footerFragment}"></div>
 <!--script include-->
-<script th:replace="~{fragments/script :: scriptFragment}"></script>
+<div th:replace="~{fragments/script :: scriptFragment}"></div>
 
 </body>
 </html>
